Clone react native intent launcher for android

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -2,8 +2,8 @@ apply plugin: 'com.android.library'
 
 def _ext = rootProject.ext
 
-def _compileSdkVersion = _ext.has('compileSdkVersion') ? _ext.compileSdkVersion : 26
-def _buildToolsVersion = _ext.has('buildToolsVersion') ? _ext.buildToolsVersion : '26.0.3'
+def _compileSdkVersion = _ext.has('compileSdkVersion') ? _ext.compileSdkVersion : 28
+def _buildToolsVersion = _ext.has('buildToolsVersion') ? _ext.buildToolsVersion : '28.0.3'
 def _minSdkVersion = _ext.has('minSdkVersion') ? _ext.minSdkVersion : 16
 def _targetSdkVersion = _ext.has('targetSdkVersion') ? _ext.targetSdkVersion : 26
 
@@ -14,6 +14,8 @@ android {
   defaultConfig {
     minSdkVersion _minSdkVersion
     targetSdkVersion _targetSdkVersion
+    versionCode 1
+    versionName "1.0"
   }
 
   lintOptions {
@@ -22,5 +24,7 @@ android {
 }
 
 dependencies {
-  compile "com.facebook.react:react-native:+" // From node_modules
+  compile fileTree(dir: "libs", include: ["*.jar"])
+  compile "com.android.support:appcompat-v7:+"
+  compile "com.facebook.react:react-native:+"  // From node_modules
 }
